Vim html edit test

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
       <div class="overlay"></div>	
+      <h1>Vim Edit Test</h1>
       <img class="enterTriangle" src="img/PenroseTrianglePortfolo.png">
     </section>
     <!-- About Section -->
